cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedCpp11IdentifierTest/bug222884.cpp

int bug222884_main() {
    int i1 = 0;
    int i2 = 0;
    try {
        throw i1, ++i2;
    } catch (int i) {
    }
    return 0;
}
